--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ h2 {
   margin-bottom: 16px;
 }
 
+select {
+  border: none;
+  outline: none;
+  font-size: 16px;
+}
+
 .currency {
   display: flex;
   flex-direction: column;
