--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ select {
   font-size: 16px;
 }
 
+input {
+  border: none;
+  outline: none;
+  font-size: 16px;
+}
 .currency {
   display: flex;
   flex-direction: column;
@@ -62,8 +67,9 @@ select {
 }
 
 .currency-option-amount {
-  padding: 16px 86px 16px 16px;
-  font-size: 16px;
+  width: 70%;
+  padding: 16px;
+  align-items: center;
 }
 
 .currency-option-flag {
