--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ main {
   box-shadow: 0px 4px 32px rgba(15, 23, 42, 0.15);
   border-radius: 16px;
   max-width: 95%;
+  max-height: 95vh;
 }
 
 h2 {
@@ -94,6 +95,12 @@ input {
   align-self: center;
 }
 
+.img {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 #chart {
   margin-top: 24px;
   width: 100%;
@@ -106,5 +113,9 @@ input {
   main {
     padding: 64px 80px;
     gap: 64px;
+  }
+  #chart {
+    width: 90%;
+    object-fit: contain;
   }
 }
